# Agentic_AI

./: README.md  book_recommendation_agent.py  code_gen_agent.py  crime_report_analysis_agent.py  finance_agent.py  hello.py  image_agent.py  legal_agent.py  movie_recommendation_agent.py  multi_agent.py  pyproject.toml  recipe_gen_agent.py  research_paper_agent.py  search_agent.py  youtube_analytics_agent.py
AI_Agents Web/backend/agents/: certificate_agent.py  leave_agent.py  query_agent.py
AI_Agents Web/backend/core/: database.py  main.py
AI_Agents Web/backend/models/: nlp_model.py
AI_Agents Web/backend/utils/: helpers.py
AI_Agents Web/config/: settings.py
AI_Agents Web/frontend/: app.py
